# beach-render

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
python/: edit_tex.py  environment.yml  gen_bathy.py  wave_speed.py
src/: CMakeLists.txt  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  gl_helpers.cpp  gl_helpers.hpp  image.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.hpp  terrain.cpp  terrain.hpp  wave.cpp  wave.hpp  window_management.cpp  window_management.hpp
src/shaders/: brdf_lut.frag  brdf_lut.vert  cube.frag  model_test.frag  model_test.vert  ocean.vert  ocean_pbr.frag  ocean_pbr2.frag  passthrough.frag  quad_tex_test.frag  snap_cube.frag  snap_cube.vert  tbn_tex.frag  tbn_tex.vert
test/: CMakeLists.txt  test_camera.cpp
